--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -530,6 +530,10 @@ color: var(--head-color);
     img{
         height: 175px;
     }
+    a:hover img{
+        transform: scale(1.1);
+        transition: all 0.3s ease;
+    }
  }
  /* ======
 Quick Access
@@ -586,4 +590,19 @@ Quick Access
 height: 300px;
 overflow: auto;}
  }
- 
+ /* ======
+ benefits-section
+ ==========*/
+ .benefits-section{
+    img{
+        width: 70px;
+        height: auto;
+    }
+a:hover img{
+    transform: scale(1.1);
+    transition: all 0.3s ease;
+}
+ }
+ .dark-theme .mazya{
+    filter: brightness(0) invert(1);
+}
