--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -92,6 +92,17 @@ hr {
             justify-content: center;
             padding: 10px;
 }
+.teams-btn {
+    position: fixed;
+    bottom:5%;
+    right: 0;
+    z-index: 999;
+    cursor: pointer;
+    display: flex
+    ;
+        justify-content: center;
+        padding: 10px;  
+}
   body {
     background-color: var(--bg-color);
     color: var(--text-color);
@@ -459,6 +470,7 @@ Home Slider
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 0;
   }
   #darkOption { 
 
