--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,7 +1,7 @@
 :root {
-    --pink: #c13b88;
-    --orange: #757709;
-    --blue: #006ee6;
+    --pink: #ed3b88;
+    --orange: #FFC200;
+    --blue: #1292E5;
     --black: #000;
     --white: #fff;
     --gray: #cfcdcd;
